frontend/src/assets/scss/components/_messageInputContainer.scss
.messageInputContainer {
  background: var(--sidebar-bg);
  padding: 10px 15px 12px 15px;
  position: relative;
  .row {
    justify-content: space-around;
    flex-direction: row;
    align-items: center;
    width: 100%;
    position: relative;
    .attachmentModal {
      background: var(--bg-color);
      position: absolute;
      top: -155px;
      left: 15px;
      opacity: 0;
      visibility: hidden;
      transform: scale(0);
      transform-origin: bottom left;
      padding: 12px 6px;
      gap: 10px;
      align-items: center;
      justify-content: center;
      border-radius: 10px;
      box-shadow: 0 2px 5px 0 rgba(var(--shadow-rgb), 0.26),
        0 2px 10px 0 rgba(var(--shadow-rgb), 0.16);
      transition: 0.3s ease-in-out;
      button {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: 8px;
        padding: 8px 10px;
        width: 100%;
        border-radius: 8px;
        transition: 0.3s ease;
        &:hover {
          background: var(--sidebar-hover);
        }
        span {
          font-size: 16px;
        }
      }
    }

    .open {
      opacity: 1;
      visibility: visible;
      transform: scale(1);
    }
    .plusBtn {
      border-radius: 50%;
      padding: 6px;
      padding-right: 7px;
      transition: 0.3s ease;
      .icon {
        width: 32px;
      }
    }
    .active {
      transform: rotate(135deg);
      background: var(--background-active);
    }
    .messageInput {
      background: var(--bg-color);
      width: 90%;
      padding: 10px 15px;
      display: flex;
      gap: 10px;
      border-radius: 10px;
      textarea {
        background: var(--bg-color);
        width: 100%;
        outline: none;
        border: none;
        resize: none;
        font-size: 16px;
        min-height: 20px;
        max-height: 200px;
        overflow-y: auto;
        scrollbar-width: thin;
        scrollbar-color: var(--chat-scroll-color) transparent;
        &::placeholder {
          font-size: 17px;
          color: var(--icon);
        }
      }
    }
    .sendVoiceMsgBtn,
    .sendMsgBtn {
      margin-bottom: 12px;
      margin-left: 8px;
    }
    button {
      background: none;
      border: none;
      display: flex;
      align-items: flex-end;
      align-self: flex-end;
      color: var(--icon);
      cursor: pointer;
    }
  }
  .filePreview {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 65%;
    height: 90%;
    background: var(--preview-bg);
    padding: 15px 0;
    transition: 0.3s ease-in-out;
    .container {
      height: 100%;
      width: 95%;
      .row {
        height: 100%;
        flex-direction: column;
        .heading {
          width: 100%;
          height: 8%;
        }
        .content {
          width: 100%;
          height: 70%;
          display: flex;
          align-items: center;
          justify-content: center;
          .previewImg {
            width: 100%;
            height: 100%;
            object-fit: contain;
          }
          .previewVideo {
            width: 90%;
            height: 90%;
          }

          .noPreview {
            background: var(--sidebar-bg);
            width: 50%;
            height: 80%;
            display: flex;
            align-items: center;
            justify-content: center;
            flex-direction: column;
            gap: 35px;
            .details {
              display: flex;
              flex-direction: column;
              align-items: center;
              gap: 10px;
              span,
              p {
                color: #aebac1;
              }
              span {
                font-size: 24px;
              }
              p {
                font-size: 14px;
              }
            }
          }
        }
        .bottom {
          width: 100%;
          height: 10%;
          display: flex;
          justify-content: flex-end;
          align-items: center;
          button {
            display: flex;
            align-items: center;
            justify-content: center;
            background: var(--input-border-active);
            border-radius: 50%;
            height: 60px;
            width: 60px;
            .icon {
              color: #fff;
              width: 24px;
            }
          }
        }
      }
    }
  }
}

@media (max-width: 425px) {
  .messageInputContainer {
    padding: 6px 12px 6px 10px;
    .row {
      .plusBtn {
        .icon {
          width: 29px;
        }
      }
      .messageInput {
        padding: 4px 7px;
        textarea {
          font-size: 15px;
          &::placeholder {
            font-size: 15px;
          }
        }
        .emojiBtn {
          width: 22px;
          height: 22px;
        }
      }
      .sendVoiceMsgBtn,
      .sendMsgBtn {
        margin-bottom: 9px;
        width: 22px;
        height: 22px;
      }
    }
  }
}

